[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/enemies/slimeBlue_blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemies/slimeBlue.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://enemy.gd" type="Script" id=4]
[ext_resource path="res://Assets/sounds/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.2829, 24.9502 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.0577, 3.32809 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 29.2902, 8.57979 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 27.3051, 6.46391 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.816948, 4.5919 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="floorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="topChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="topChecker"]
position = Vector2( 0.353561, -11.3431 )
shape = SubResource( 3 )

[node name="sidesChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sidesChecker"]
position = Vector2( 0.799011, 6.7931 )
shape = SubResource( 4 )

[node name="bottomChecker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottomChecker"]
position = Vector2( 1.11362, 11.8044 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="soundSquash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 10.331

[connection signal="body_entered" from="topChecker" to="." method="_on_topChecker_body_entered"]
[connection signal="body_entered" from="sidesChecker" to="." method="_on_sidesChecker_body_entered"]
[connection signal="body_entered" from="bottomChecker" to="." method="_on_bottomChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
